--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".EditProfileActivity">
     <ImageButton
-        android:id="@+id/btn_cancel"
+        android:id="@+id/cancel_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_cancel"
@@ -21,31 +21,31 @@
         android:text="프로필 편집"
         android:textSize="22sp"
         android:layout_marginLeft="40dp"
-        app:layout_constraintLeft_toRightOf="@id/btn_cancel"
-        app:layout_constraintTop_toTopOf="@id/btn_cancel"
-        app:layout_constraintBottom_toBottomOf="@id/btn_cancel"/>
+        app:layout_constraintLeft_toRightOf="@id/cancel_button"
+        app:layout_constraintTop_toTopOf="@id/cancel_button"
+        app:layout_constraintBottom_toBottomOf="@id/cancel_button"/>
     <ImageButton
-        android:id="@+id/btn_edit"
+        android:id="@+id/edit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_check"
         android:background="@color/transparent"
         android:layout_marginRight="15dp"
-        app:layout_constraintTop_toTopOf="@id/btn_cancel"
-        app:layout_constraintBottom_toBottomOf="@id/btn_cancel"
+        app:layout_constraintTop_toTopOf="@id/cancel_button"
+        app:layout_constraintBottom_toBottomOf="@id/cancel_button"
         app:layout_constraintRight_toRightOf="parent"/>
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profile"
+        android:id="@+id/profile_imageview"
         android:layout_width="140dp"
         android:layout_height="140dp"
         android:layout_marginBottom="50dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_cancel"
-        app:layout_constraintBottom_toTopOf="@id/et_name"/>
+        app:layout_constraintTop_toBottomOf="@id/cancel_button"
+        app:layout_constraintBottom_toTopOf="@id/name_edittext"/>
     <TextView
-        android:id="@+id/tv_profile"
+        android:id="@+id/profile_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="프로필 사진 변경"
@@ -54,46 +54,45 @@
         android:layout_marginTop="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/profile"/>
+        app:layout_constraintTop_toBottomOf="@id/profile_imageview"/>
     <TextView
-        android:id="@+id/tv_name"
+        android:id="@+id/name_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="이름"
-        app:layout_constraintLeft_toLeftOf="@id/et_name"
-        app:layout_constraintBottom_toTopOf="@id/et_name"/>
+        app:layout_constraintLeft_toLeftOf="@id/name_edittext"
+        app:layout_constraintBottom_toTopOf="@id/name_edittext"/>
     <EditText
-        android:id="@+id/et_name"
+        android:id="@+id/name_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
         android:layout_marginHorizontal="15dp"
-        app:layout_constraintTop_toBottomOf="@id/profile"
-        app:layout_constraintBottom_toTopOf="@id/et_introduce"/>
+        app:layout_constraintTop_toBottomOf="@id/profile_imageview"
+        app:layout_constraintBottom_toTopOf="@id/introduce_edittext"/>
     <TextView
-        android:id="@+id/tv_error_name"
+        android:id="@+id/name_error_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="이름을 입력해주세요"
         android:textColor="@color/red"
         android:visibility="invisible"
-        app:layout_constraintTop_toBottomOf="@id/et_name"
-        app:layout_constraintLeft_toLeftOf="@id/et_name"/>
+        app:layout_constraintTop_toBottomOf="@id/name_edittext"
+        app:layout_constraintLeft_toLeftOf="@id/name_edittext"/>
     <TextView
-        android:id="@+id/tv_introduce"
+        android:id="@+id/introduce_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="소개"
-        app:layout_constraintLeft_toLeftOf="@id/et_introduce"
-
-        app:layout_constraintBottom_toTopOf="@id/et_introduce"/>
+        app:layout_constraintLeft_toLeftOf="@id/introduce_edittext"
+        app:layout_constraintBottom_toTopOf="@id/introduce_edittext"/>
     <EditText
-        android:id="@+id/et_introduce"
+        android:id="@+id/introduce_edittext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
         android:layout_marginHorizontal="15dp"
-        app:layout_constraintTop_toBottomOf="@id/et_name"
+        app:layout_constraintTop_toBottomOf="@id/name_edittext"
         app:layout_constraintBottom_toTopOf="@id/user_setting"/>
 
     <View
@@ -111,7 +110,7 @@
         android:textSize="18sp"
         android:paddingStart="15dp"
         android:layout_marginBottom="80dp"
-        app:layout_constraintTop_toBottomOf="@id/et_introduce"
+        app:layout_constraintTop_toBottomOf="@id/introduce_edittext"
         app:layout_constraintBottom_toBottomOf="parent"/>
     <View
         android:layout_width="match_parent"
