--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".JoinActivity">
+    tools:context=".SignUpActivity">
     <TextView
         android:id="@+id/tv"
         android:layout_width="wrap_content"
@@ -33,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <EditText
-                android:id="@+id/et_Name"
+                android:id="@+id/name_edittext"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:hint="최대 8자 입력 가능"
@@ -60,7 +60,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <EditText
-                android:id="@+id/et_email"
+                android:id="@+id/email_edittext"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:hint="이메일 입력"
@@ -69,7 +69,7 @@
                 android:background="@drawable/edit"/>
         </com.google.android.material.textfield.TextInputLayout>
         <TextView
-            android:id="@+id/tv_error_email"
+            android:id="@+id/email_error_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=" "
@@ -80,7 +80,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="35dp"
-        app:layout_constraintBottom_toTopOf="@id/join"
+        app:layout_constraintBottom_toTopOf="@id/sign_up_button"
         app:layout_constraintTop_toBottomOf="@id/layout2"
         android:orientation="vertical">
         <TextView
@@ -93,7 +93,7 @@
             android:layout_height="wrap_content"
             app:passwordToggleEnabled="true">
             <EditText
-                android:id="@+id/et_pwd"
+                android:id="@+id/password_edittext"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:hint="최소 8자 입력"
@@ -102,7 +102,7 @@
                 android:background="@drawable/edit"/>
         </com.google.android.material.textfield.TextInputLayout>
         <TextView
-            android:id="@+id/tv_error_pwd"
+            android:id="@+id/password_error_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=" "
@@ -112,7 +112,7 @@
             android:layout_height="wrap_content"
             app:passwordToggleEnabled="true">
             <EditText
-                android:id="@+id/et_pwdch"
+                android:id="@+id/password_check_edittext"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:hint="비밀번호 확인"
@@ -121,14 +121,14 @@
                 android:background="@drawable/edit"/>
         </com.google.android.material.textfield.TextInputLayout>
         <TextView
-            android:id="@+id/tv_error_pwdch"
+            android:id="@+id/password_check_error_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=" "
             android:textColor="@color/red"/>
     </LinearLayout>
     <Button
-        android:id="@+id/join"
+        android:id="@+id/sign_up_button"
         android:layout_width="match_parent"
         android:layout_height="45dp"
         android:layout_marginHorizontal="35dp"
