--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,7 +23,7 @@
             android:layout_height="1dp"
             android:layout_weight="1"/>
         <ImageButton
-            android:id="@+id/btn_write"
+            android:id="@+id/write_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_write"
@@ -41,7 +41,5 @@
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/layout"
         app:layout_constraintBottom_toBottomOf="parent"/>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
