--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -10,7 +10,7 @@
         android:layout_height="290dp"
         app:layout_constraintTop_toTopOf="parent">
         <ImageButton
-            android:id="@+id/btn_settingMenu"
+            android:id="@+id/bottom_sheet_menu_button"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/ic_setting_menu"
@@ -20,45 +20,45 @@
             android:layout_marginTop="15dp"
             android:layout_marginRight="10dp"/>
         <ImageButton
-            android:id="@+id/btn_write"
+            android:id="@+id/write_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_write"
             android:background="@color/transparent"
-            app:layout_constraintBottom_toBottomOf="@id/btn_settingMenu"
-            app:layout_constraintRight_toLeftOf="@id/btn_settingMenu"
-            app:layout_constraintTop_toTopOf="@id/btn_settingMenu"
+            app:layout_constraintBottom_toBottomOf="@id/bottom_sheet_menu_button"
+            app:layout_constraintRight_toLeftOf="@id/bottom_sheet_menu_button"
+            app:layout_constraintTop_toTopOf="@id/bottom_sheet_menu_button"
             android:layout_marginRight="30dp"/>
         <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/profile"
+            android:id="@+id/profile_imageview"
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:layout_marginLeft="25dp"
             android:layout_marginTop="20dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btn_settingMenu"/>
+            app:layout_constraintTop_toBottomOf="@id/bottom_sheet_menu_button"/>
         <TextView
-            android:id="@+id/tv_name"
+            android:id="@+id/name_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            app:layout_constraintTop_toBottomOf="@id/profile"
-            app:layout_constraintLeft_toLeftOf="@id/profile"/>
+            app:layout_constraintTop_toBottomOf="@id/profile_imageview"
+            app:layout_constraintLeft_toLeftOf="@id/profile_imageview"/>
         <TextView
-            android:id="@+id/tv_introduce"
+            android:id="@+id/introduce_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/tv_name"
-            app:layout_constraintLeft_toLeftOf="@id/profile"/>
+            app:layout_constraintTop_toBottomOf="@id/name_textview"
+            app:layout_constraintLeft_toLeftOf="@id/profile_imageview"/>
         <Button
-            android:id="@+id/btn_edit_profile"
+            android:id="@+id/profile_edit_button"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:text="프로필 편집"
             android:layout_marginHorizontal="24dp"
             android:background="@drawable/line_2"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_introduce"/>
+            app:layout_constraintTop_toBottomOf="@id/introduce_textview"/>
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
