--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/post_user_image"
+        android:id="@+id/post_user_imageview"
         android:layout_width="60dp"
         android:layout_height="60dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -14,9 +14,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="이름"
-        app:layout_constraintTop_toTopOf="@id/post_user_image"
+        app:layout_constraintTop_toTopOf="@id/post_user_imageview"
         app:layout_constraintBottom_toTopOf="@id/post_location"
-        app:layout_constraintLeft_toRightOf="@id/post_user_image"/>
+        app:layout_constraintLeft_toRightOf="@id/post_user_imageview"/>
     <TextView
         android:id="@+id/post_location"
         android:layout_width="wrap_content"
@@ -24,15 +24,15 @@
         android:text="위치"
         app:layout_constraintLeft_toLeftOf="@id/post_name"
         app:layout_constraintTop_toBottomOf="@id/post_name"
-        app:layout_constraintBottom_toBottomOf="@id/post_user_image"/>
+        app:layout_constraintBottom_toBottomOf="@id/post_user_imageview"/>
     <ImageView
         android:id="@+id/post_image"
         android:layout_width="match_parent"
         android:layout_height="370dp"
         android:adjustViewBounds="true"
-        app:layout_constraintTop_toBottomOf="@id/post_user_image"/>
+        app:layout_constraintTop_toBottomOf="@id/post_user_imageview"/>
     <ImageButton
-        android:id="@+id/btn_heart"
+        android:id="@+id/heart_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_heart"
@@ -42,28 +42,28 @@
         app:layout_constraintTop_toBottomOf="@id/post_image"
         app:layout_constraintLeft_toLeftOf="parent"/>
     <ImageButton
-        android:id="@+id/btn_comment"
+        android:id="@+id/comment_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_comment"
         android:background="@color/transparent"
         android:layout_marginLeft="15dp"
-        app:layout_constraintLeft_toRightOf="@id/btn_heart"
-        app:layout_constraintTop_toTopOf="@id/btn_heart"/>
+        app:layout_constraintLeft_toRightOf="@id/heart_button"
+        app:layout_constraintTop_toTopOf="@id/heart_button"/>
     <TextView
-        android:id="@+id/tv_heart"
+        android:id="@+id/heart_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="좋아요 10개"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/btn_heart"
-        app:layout_constraintLeft_toLeftOf="@id/btn_heart"/>
+        app:layout_constraintTop_toBottomOf="@id/heart_button"
+        app:layout_constraintLeft_toLeftOf="@id/heart_button"/>
     <TextView
         android:id="@+id/post"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="120dp"
         android:layout_marginHorizontal="20dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_heart"/>
+        app:layout_constraintTop_toBottomOf="@id/heart_textview"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
