--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -7,6 +7,7 @@
         android:id="@+id/post_user_imageview"
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:layout_margin="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
     <TextView
@@ -14,6 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="이름"
+        android:layout_marginLeft="10dp"
         app:layout_constraintTop_toTopOf="@id/post_user_imageview"
         app:layout_constraintBottom_toTopOf="@id/post_location"
         app:layout_constraintLeft_toRightOf="@id/post_user_imageview"/>
@@ -30,6 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="370dp"
         android:adjustViewBounds="true"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@id/post_user_imageview"/>
     <ImageButton
         android:id="@+id/heart_button"
