--- a/app/src/main/res/layout/fragment_bottom_sheet_setting.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet_setting.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".BottomSheetSettingFragment">
+    tools:context=".fragment.BottomSheetSettingFragment">
 
     <LinearLayout
         android:id="@+id/user_setting"
