--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".main.HomeFragment">
+    tools:context=".fragment.HomeFragment">
     <LinearLayout
         android:id="@+id/layout"
         android:layout_width="match_parent"
